--- a/app/client/style.css
+++ b/app/client/style.css
@@ -219,6 +219,10 @@ img.ui.avatar.image {
   cursor: default;
 }
 
+#navigation-buy {
+  padding-left: 1100px !important;
+}
+
 p.navigation {
   font-family: "Roboto", "Helvetica Neue", serif;
   margin-top: 22px;
