--- a/app/client/style.css
+++ b/app/client/style.css
@@ -30,6 +30,10 @@ h4 {
   padding-left: 0;
 }
 
+#nav-guide {
+  padding-left: 870px;
+}
+
 .footer-background {
   background-color: #363636;
   color: white;
@@ -549,15 +553,49 @@ p.side-bar-items:hover:after {
 /* PROFILE SECTION */
 /* ~~~~~START~~~~~ */
 /* ~~~~~~~~~~~~~~~ */
-#prof-middle {
+#prof-page {
   background-color: #f5f2ee !important;
-  padding-top: 100px;
+  padding-top: 75px;
   padding-bottom: 400px;
 }
+
+#prof-top {
+  background-color: #f1e2d3;
+  height: 150px;
+}
+
+#prof-middle {
+  background-color: #fafafa;
+  height: 50px;
+}
+
+#prof-menu {
+  border: none;
+  box-shadow: none;
+  background-color: #fafafa !important;
+}
+
+.profile-words {
+  font-family: "Lato", "Helvetica Neue", serif;
+  color: #024731;
+  font-size: 15px;
+}
+
+#prof-email {
+  padding-bottom: 100px;
+}
+
+#profile-image {
+  border: 2px solid #024731;
+  border-radius: 500rem;
+  margin-right: 0 !important;
+}
+
 
 #profText {
   font-family: "Lato", "Helvetica Neue", serif;
 }
+
 /* PROFILE SECTION */
 /* ~~~~~~END~~~~~~ */
 /* ~~~~~~~~~~~~~~~ */
